add new image for test

--- a/menu.html
+++ b/menu.html
@@ -1114,7 +1114,7 @@
                             <div class="our-menu-item wow fadeInUp" data-wow-delay="0.2s">
                                 <div class="our-menu-image">
                                     <figure>
-                                        <img src="images/seafood-img-2.png" alt="Fried Squid">
+                                        <img src="images/fride-squid.png" alt="Fried Squid">
                                     </figure>
                                 </div>
                                 <div class="menu-item-body">
@@ -1252,14 +1252,14 @@
                     
                             <!-- Seafood Item Start -->
                             <div class="our-menu-item wow fadeInUp" data-wow-delay="1.6s">
-                                <div class="our-menu-image">
+                                <div class="menu-image">
                                     <figure>
-                                        <img src="images/seafood-img-9.png" alt="Seafood Platter">
+                                        <img src="images/seafood-mix-for-2.png" alt="Seafood Mix For Two">
                                     </figure>
                                 </div>
                                 <div class="menu-item-body">
                                     <div class="menu-item-title">
-                                        <h3>Seafood Platter for Two</h3>
+                                        <h3>Seafood Mix For Two</h3>
                                         <hr>
                                         <span>€35,00</span>
                                     </div>
