--- a/menu.html
+++ b/menu.html
@@ -109,7 +109,7 @@
 				<div class="col-lg-12">
 					<!-- Page Header Box Start -->
 					<div class="page-header-box">
-						<h1 class="text-anime-style-2" data-cursor="-opaque">our menu</h1>
+						<h1 class="text-anime-style-2" data-cursor="-opaque">sEE THE MENU</h1>
 						<nav class="wow fadeInUp">
 						</nav>
 					</div>
@@ -1316,7 +1316,7 @@
                     <div class="our-menu-item wow fadeInUp">
                         <div class="our-menu-image">
                             <figure>
-                                <img src="images/fish-img-1.png" alt="Grilled Sardines">
+                                <img src="images/grilled-sardines-png.webp" alt="Grilled Sardines">
                             </figure>
                         </div>
                         <div class="menu-item-body">
@@ -1336,7 +1336,7 @@
                     <div class="our-menu-item wow fadeInUp" data-wow-delay="0.2s">
                         <div class="our-menu-image">
                             <figure>
-                                <img src="images/fish-img-2.png" alt="Fried Anchovy">
+                                <img src="images/grilled-sardines-png.webp" alt="Fried Anchovy">
                             </figure>
                         </div>
                         <div class="menu-item-body">
@@ -1356,7 +1356,7 @@
                     <div class="our-menu-item wow fadeInUp" data-wow-delay="0.4s">
                         <div class="our-menu-image">
                             <figure>
-                                <img src="images/fish-img-3.png" alt="Red Mullet">
+                                <img src="images/grilled-sardines-png.webp" alt="Red Mullet">
                             </figure>
                         </div>
                         <div class="menu-item-body">
@@ -1376,7 +1376,7 @@
                     <div class="our-menu-item wow fadeInUp" data-wow-delay="0.6s">
                         <div class="our-menu-image">
                             <figure>
-                                <img src="images/fish-img-4.png" alt="Grilled Swordfish">
+                                <img src="images/grilled-sardines-png.webp" alt="Grilled Swordfish">
                             </figure>
                         </div>
                         <div class="menu-item-body">
@@ -1396,7 +1396,7 @@
                     <div class="our-menu-item wow fadeInUp" data-wow-delay="0.8s">
                         <div class="our-menu-image">
                             <figure>
-                                <img src="images/fish-img-5.png" alt="Grilled Gilt-Head Bream">
+                                <img src="images/grilled-sardines-png.webp" alt="Grilled Gilt-Head Bream">
                             </figure>
                         </div>
                         <div class="menu-item-body">
@@ -1416,7 +1416,7 @@
                     <div class="our-menu-item wow fadeInUp" data-wow-delay="1s">
                         <div class="our-menu-image">
                             <figure>
-                                <img src="images/fish-img-6.png" alt="Grilled Sea Bass">
+                                <img src="images/grilled-sardines-png.webp" alt="Grilled Sea Bass">
                             </figure>
                         </div>
                         <div class="menu-item-body">
@@ -1436,7 +1436,7 @@
                     <div class="our-menu-item wow fadeInUp" data-wow-delay="1.2s">
                         <div class="our-menu-image">
                             <figure>
-                                <img src="images/fish-img-7.png" alt="Grilled Red Snapper">
+                                <img src="images/grilled-sardines-png.webp" alt="Grilled Red Snapper">
                             </figure>
                         </div>
                         <div class="menu-item-body">
@@ -1456,7 +1456,7 @@
                     <div class="our-menu-item wow fadeInUp" data-wow-delay="1.4s">
                         <div class="our-menu-image">
                             <figure>
-                                <img src="images/fish-img-8.png" alt="Fried Cod">
+                                <img src="images/grilled-sardines-png.webp" alt="Fried Cod">
                             </figure>
                         </div>
                         <div class="menu-item-body">
@@ -1598,7 +1598,7 @@
                     <div class="our-menu-item wow fadeInUp" data-wow-delay="1s">
                         <div class="our-menu-image">
                             <figure>
-                                <img src="images/meat-img-6.png" alt="Pork Neck">
+                                <img src="images/pork-neck.png" alt="Pork Neck">
                             </figure>
                         </div>
                         <div class="menu-item-body">
