--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 				<div class="container">
 					<!-- Logo Start -->
 					<a class="navbar-brand" href="index.html">
-						<img src="images/logo.svg" alt="Logo">
+						<img src="images/liana-tavern (L).png" alt="Logo" height="50">
 					</a>
 					<!-- Logo End -->
 
@@ -134,7 +134,7 @@
                         <!-- Hero Image Start -->
                         <div class="hero-image">
                             <figure class="image-anime">
-                                <img src="images/hero-img.jpg" alt="">
+                                <img src="images/hero.webp" alt="">
                             </figure>                            
                         </div>  
                         <!-- Hero Image End -->    
