--- a/menu.html
+++ b/menu.html
@@ -129,7 +129,8 @@
                     <div class="section-title">
                         <h3 class="wow fadeInUp">taste the best that surprise you</h3>
                         <h2 class="text-anime-style-2" data-cursor="-opaque">our special <span>menu</span></h2>
-                        <p class="wow fadeInUp" data-wow-delay="0.2s">Enjoy the unique dishes from the basillico restaurant that only our restaurant has,Fusce malesuada, lorem vitae euismod lobortis.</p>
+                        <p class="wow fadeInUp" data-wow-delay="0.2s">Enjoy grilled calamari, mussels, cod, juicy meats, and fresh salads — all made with quality ingredients for a tasty experience.
+                        </p>
                     </div>
                     <!-- Section Title End -->
                 </div>
