add vegeterian and vegan icons in the dishesh

--- a/menu.html
+++ b/menu.html
@@ -33,6 +33,9 @@
 	<link rel="stylesheet" href="css/mousecursor.css">
 	<!-- Main Custom Css -->
 	<link href="css/custom.css" rel="stylesheet" media="screen">
+	
+	<style>
+	</style>
 </head>
 <body>
 
@@ -51,7 +54,7 @@
 			<nav class="navbar navbar-expand-lg">
 				<div class="container">
 					<!-- Logo Start -->
-					<a class="navbar-brand" href="index.html">
+					<a class="navbar-brand" href="#">
 						<img src="images/liana-tavern (L).png" alt="Logo" height="50">
 					</a>
 					<!-- Logo End -->
@@ -60,36 +63,36 @@
 					<div class="collapse navbar-collapse main-menu">
                         <div class="nav-menu-wrapper">
                             <ul class="navbar-nav mr-auto" id="menu">
-                                <li class="nav-item submenu"><a class="nav-link" href="index.html">Home</a>
+                                <li class="nav-item submenu"><a class="nav-link" href="#">Home</a>
                                     <ul>
-                                        <li class="nav-item"><a class="nav-link" href="index-2.html">Home - Image</a></li>
-                                        <li class="nav-item"><a class="nav-link" href="index-video.html">Home - Video</a></li>
-                                        <li class="nav-item"><a class="nav-link" href="index-slider.html">Home - Slider</a></li>
+                                        <li class="nav-item"><a class="nav-link" href="#">Home - Image</a></li>
+                                        <li class="nav-item"><a class="nav-link" href="#">Home - Video</a></li>
+                                        <li class="nav-item"><a class="nav-link" href="#">Home - Slider</a></li>
                                     </ul>
                                 </li>                                
-                                <li class="nav-item"><a class="nav-link" href="about.html">About Us</a>
-                                    <li class="nav-item"><a class="nav-link" href="services.html">Services</a></li>
-                                <li class="nav-item"><a class="nav-link" href="menu.html">menu</a></li>
+                                <li class="nav-item"><a class="nav-link" href="#">About Us</a>
+                                    <li class="nav-item"><a class="nav-link" href="#">Services</a></li>
+                                <li class="nav-item"><a class="nav-link" href="#">menu</a></li>
                                 <li class="nav-item submenu"><a class="nav-link" href="#">Pages</a>
                                     <ul>                                        
-                                        <li class="nav-item"><a class="nav-link" href="service-single.html">Services Details</a></li>
-                                        <li class="nav-item"><a class="nav-link" href="blog.html">Blog</a></li>
-                                        <li class="nav-item"><a class="nav-link" href="blog-single.html">Blog Details</a></li>
-                                        <li class="nav-item"><a class="nav-link" href="chefs.html">Our Chefs</a></li>
-                                        <li class="nav-item"><a class="nav-link" href="chef-single.html">Chef Details</a></li>
-                                        <li class="nav-item"><a class="nav-link" href="testimonial.html">Testimonials</a></li>
-                                        <li class="nav-item"><a class="nav-link" href="image-gallery.html">Image Gallery</a></li>
-                                        <li class="nav-item"><a class="nav-link" href="video-gallery.html">Video Gallery</a></li>
-                                        <li class="nav-item"><a class="nav-link" href="faqs.html">FAQs</a></li>
-                                        <li class="nav-item"><a class="nav-link" href="404.html">404</a></li>
+                                        <li class="nav-item"><a class="nav-link" href="#">Services Details</a></li>
+                                        <li class="nav-item"><a class="nav-link" href="#">Blog</a></li>
+                                        <li class="nav-item"><a class="nav-link" href="#">Blog Details</a></li>
+                                        <li class="nav-item"><a class="nav-link" href="#">Our Chefs</a></li>
+                                        <li class="nav-item"><a class="nav-link" href="#">Chef Details</a></li>
+                                        <li class="nav-item"><a class="nav-link" href="#">Testimonials</a></li>
+                                        <li class="nav-item"><a class="nav-link" href="#">Image Gallery</a></li>
+                                        <li class="nav-item"><a class="nav-link" href="#">Video Gallery</a></li>
+                                        <li class="nav-item"><a class="nav-link" href="#">FAQs</a></li>
+                                        <li class="nav-item"><a class="nav-link" href="#">404</a></li>
                                     </ul>
                                 </li>
-                                <li class="nav-item"><a class="nav-link" href="contact.html">Contact Us</a></li>                           
+                                <li class="nav-item"><a class="nav-link" href="#">Contact Us</a></li>                           
                             </ul>
                         </div>
                         <!-- Header Contact Box Start -->
                         <div class="header-btn">
-                            <a href="contact.html" class="btn-default">book a table</a>
+                            <a href="#" class="btn-default">book a table</a>
                         </div>
                         <!-- Header Contact Box End -->
 					</div>
@@ -205,7 +208,7 @@
 
         <!-- Menu Item Content Start -->
         <div class="menu-item-content">
-            <p>Spicy peppers stuffed with cheese and herbs.</p>
+            <p>Spicy peppers stuffed with cheese and herbs. 🍃</p>
         </div>
         <!-- Menu Item Content End -->
     </div>
@@ -221,7 +224,7 @@
     </div>
     <div class="menu-item-body">
         <div class="menu-item-title">
-            <h3>Grilled feta</h3>
+            <h3>Grilled feta 🍃</h3>
             <hr>
             <span>€5,50</span>
         </div>
@@ -239,7 +242,7 @@
     </div>
     <div class="menu-item-body">
         <div class="menu-item-title">
-            <h3>Feta cheese</h3>
+            <h3>Feta cheese 🍃</h3>
             <hr>
             <span>€4,50</span>
         </div>
@@ -257,7 +260,7 @@
     </div>
     <div class="menu-item-body">
         <div class="menu-item-title">
-            <h3>Cheese fritters</h3>
+            <h3>Cheese fritters 🍃</h3>
             <hr>
             <span>€5,50</span>
         </div>
@@ -275,7 +278,7 @@
     </div>
     <div class="menu-item-body">
         <div class="menu-item-title">
-            <h3>Fried potatoes</h3>
+            <h3>Fried potatoes 🍃 🥬</h3>
             <hr>
             <span>€5,00</span>
         </div>
@@ -293,7 +296,7 @@
     </div>
     <div class="menu-item-body">
         <div class="menu-item-title">
-            <h3>Halloumi cheese</h3>
+            <h3>Halloumi cheese 🍃</h3>
             <hr>
             <span>€6,00</span>
         </div>
@@ -311,7 +314,7 @@
     </div>
     <div class="menu-item-body">
         <div class="menu-item-title">
-            <h3>Talagani cheese</h3>
+            <h3>Talagani cheese 🍃</h3>
             <hr>
             <span>€6,00</span>
         </div>
@@ -328,7 +331,7 @@
     </div>
     <div class="menu-item-body">
         <div class="menu-item-title">
-            <h3>Kefalotyri Saganaki</h3>
+            <h3>Kefalotyri Saganaki 🍃</h3>
             <hr>
             <span>€6,00</span>
         </div>
@@ -346,7 +349,7 @@
     </div>
     <div class="menu-item-body">
         <div class="menu-item-title">
-            <h3>Fried Courgettes</h3>
+            <h3>Fried Courgettes 🍃 🥬</h3>
             <hr>
             <span>€5,00</span>
         </div>
@@ -382,7 +385,7 @@
     </div>
     <div class="menu-item-body">
         <div class="menu-item-title">
-            <h3>Roast Stuffed Aubergine</h3>
+            <h3>Roast Stuffed Aubergine 🍃</h3>
             <hr>
             <span>€6,50</span>
         </div>
@@ -400,7 +403,7 @@
     </div>
     <div class="menu-item-body">
         <div class="menu-item-title">
-            <h3>Stuffed Potato</h3>
+            <h3>Stuffed Potato 🍃</h3>
             <hr>
             <span>€6,50</span>
         </div>
@@ -418,7 +421,7 @@
     </div>
     <div class="menu-item-body">
         <div class="menu-item-title">
-            <h3>Grilled Mushrooms</h3>
+            <h3>Grilled Mushrooms 🍃 🥬</h3>
             <hr>
             <span>€6,00</span>
         </div>
@@ -436,7 +439,7 @@
     </div>
     <div class="menu-item-body">
         <div class="menu-item-title">
-            <h3>Stuffed Mushrooms</h3>
+            <h3>Stuffed Mushrooms 🍃</h3>
             <hr>
             <span>€6,50</span>
         </div>
@@ -454,7 +457,7 @@
     </div>
     <div class="menu-item-body">
         <div class="menu-item-title">
-            <h3>Buyurdi</h3>
+            <h3>Buyurdi 🍃</h3>
             <hr>
             <span>€6,00</span>
         </div>
@@ -472,7 +475,7 @@
     </div>
     <div class="menu-item-body">
         <div class="menu-item-title">
-            <h3>Bruschetta</h3>
+            <h3>Bruschetta 🍃</h3>
             <hr>
             <span>€5,50</span>
         </div>
@@ -490,7 +493,7 @@
     </div>
     <div class="menu-item-body">
         <div class="menu-item-title">
-            <h3>Zucchini Patties</h3>
+            <h3>Zucchini Patties 🍃 🥬</h3>
             <hr>
             <span>€6,00</span>
         </div>
@@ -508,7 +511,7 @@
     </div>
     <div class="menu-item-body">
         <div class="menu-item-title">
-            <h3>Stuffed Vine Leaves</h3>
+            <h3>Stuffed Vine Leaves 🍃 🥬</h3>
             <hr>
             <span>€6,00</span>
         </div>
@@ -526,7 +529,7 @@
     </div>
     <div class="menu-item-body">
         <div class="menu-item-title">
-            <h3>Feta with Phyllo Crust</h3>
+            <h3>Feta with Phyllo Crust 🍃</h3>
             <hr>
             <span>€6,70</span>
         </div>
@@ -564,7 +567,7 @@
         </div>
         <div class="menu-item-body">
             <div class="menu-item-title">
-                <h3>Tzatziki</h3>
+                <h3>Tzatziki 🍃</h3>
                 <hr>
                 <span>€5,00</span>
             </div>
