change the bg image in the menu page

--- a/menu.html
+++ b/menu.html
@@ -112,7 +112,7 @@
 				<div class="col-lg-12">
 					<!-- Page Header Box Start -->
 					<div class="page-header-box">
-						<h1 class="text-anime-style-2" data-cursor="-opaque">sEE THE MENU</h1>
+						<h1 class="text-anime-style-2" data-cursor="-opaque">SEE THE MENU</h1>
 						<nav class="wow fadeInUp">
 						</nav>
 					</div>
