--- a/menu.html
+++ b/menu.html
@@ -132,8 +132,16 @@
                     <div class="section-title">
                         <h3 class="wow fadeInUp">taste the best that surprise you</h3>
                         <h2 class="text-anime-style-2" data-cursor="-opaque">our special <span>menu</span></h2>
-                        <p class="wow fadeInUp" data-wow-delay="0.2s">Enjoy grilled calamari, mussels, cod, juicy meats, and fresh salads — all made with quality ingredients for a tasty experience.
-                        </p>
+                        <div class="menu-legend wow fadeInUp" data-wow-delay="0.2s">
+                            <div class="legend-item">
+                                <span class="food-badge badge-vegan">🥬</span>
+                                <span class="legend-text">Vegan</span>
+                            </div>
+                            <div class="legend-item">
+                                <span class="food-badge badge-vegetarian">🍃</span>
+                                <span class="legend-text">Vegetarian</span>
+                            </div>
+                        </div>
                     </div>
                     <!-- Section Title End -->
                 </div>
@@ -242,7 +250,10 @@
     </div>
     <div class="menu-item-body">
         <div class="menu-item-title">
-            <h3>Feta cheese 🍃</h3>
+            <h3>Feta cheese</h3>
+                                        <div class="legend-item"> 
+                                 <span class="food-badge badge-vegetarian">🍃</span>
+                             </div>
             <hr>
             <span>€4,50</span>
         </div>
@@ -260,7 +271,10 @@
     </div>
     <div class="menu-item-body">
         <div class="menu-item-title">
-            <h3>Cheese fritters 🍃</h3>
+            <h3>Cheese fritters</h3>
+                                        <div class="legend-item"> 
+                                 <span class="food-badge badge-vegetarian">🍃</span>
+                             </div>
             <hr>
             <span>€5,50</span>
         </div>
@@ -278,7 +292,11 @@
     </div>
     <div class="menu-item-body">
         <div class="menu-item-title">
-            <h3>Fried potatoes 🍃 🥬</h3>
+            <h3>Fried potatoes</h3>
+                            <div class="legend-item"> 
+                                 <span class="food-badge badge-vegan">🥬</span> 
+                                 <span class="food-badge badge-vegetarian">🍃</span>
+                             </div>
             <hr>
             <span>€5,00</span>
         </div>
