--- a/menu.html
+++ b/menu.html
@@ -209,6 +209,9 @@
         <!-- Menu Item Title Start -->
         <div class="menu-item-title">
             <h3>Spicy peppers</h3>
+            <div class="legend-item">
+                <span class="food-badge badge-vegetarian">🍃</span>
+            </div>
             <hr>
             <span>€1,90</span>
         </div>
@@ -216,7 +219,7 @@
 
         <!-- Menu Item Content Start -->
         <div class="menu-item-content">
-            <p>Spicy peppers stuffed with cheese and herbs. 🍃</p>
+            <p>Spicy peppers stuffed with cheese and herbs.</p>
         </div>
         <!-- Menu Item Content End -->
     </div>
@@ -232,7 +235,10 @@
     </div>
     <div class="menu-item-body">
         <div class="menu-item-title">
-            <h3>Grilled feta 🍃</h3>
+            <h3>Grilled feta</h3>
+            <div class="legend-item">
+                <span class="food-badge badge-vegetarian">🍃</span>
+            </div>
             <hr>
             <span>€5,50</span>
         </div>
@@ -314,7 +320,10 @@
     </div>
     <div class="menu-item-body">
         <div class="menu-item-title">
-            <h3>Halloumi cheese 🍃</h3>
+            <h3>Halloumi cheese</h3>
+            <div class="legend-item">
+                <span class="food-badge badge-vegetarian">🍃</span>
+            </div>
             <hr>
             <span>€6,00</span>
         </div>
@@ -332,7 +341,10 @@
     </div>
     <div class="menu-item-body">
         <div class="menu-item-title">
-            <h3>Talagani cheese 🍃</h3>
+            <h3>Talagani cheese</h3>
+            <div class="legend-item">
+                <span class="food-badge badge-vegetarian">🍃</span>
+            </div>
             <hr>
             <span>€6,00</span>
         </div>
@@ -349,7 +361,10 @@
     </div>
     <div class="menu-item-body">
         <div class="menu-item-title">
-            <h3>Kefalotyri Saganaki 🍃</h3>
+            <h3>Kefalotyri Saganaki</h3>
+            <div class="legend-item">
+                <span class="food-badge badge-vegetarian">🍃</span>
+            </div>
             <hr>
             <span>€6,00</span>
         </div>
@@ -367,7 +382,11 @@
     </div>
     <div class="menu-item-body">
         <div class="menu-item-title">
-            <h3>Fried Courgettes 🍃 🥬</h3>
+            <h3>Fried Courgettes</h3>
+            <div class="legend-item">
+                <span class="food-badge badge-vegetarian">🍃</span>
+                <span class="food-badge badge-vegan">🥬</span>
+            </div>
             <hr>
             <span>€5,00</span>
         </div>
@@ -403,7 +422,10 @@
     </div>
     <div class="menu-item-body">
         <div class="menu-item-title">
-            <h3>Roast Stuffed Aubergine 🍃</h3>
+            <h3>Roast Stuffed Aubergine</h3>
+            <div class="legend-item">
+                <span class="food-badge badge-vegetarian">🍃</span>
+            </div>
             <hr>
             <span>€6,50</span>
         </div>
@@ -421,7 +443,10 @@
     </div>
     <div class="menu-item-body">
         <div class="menu-item-title">
-            <h3>Stuffed Potato 🍃</h3>
+            <h3>Stuffed Potato</h3>
+            <div class="legend-item">
+                <span class="food-badge badge-vegetarian">🍃</span>
+            </div>
             <hr>
             <span>€6,50</span>
         </div>
@@ -439,7 +464,11 @@
     </div>
     <div class="menu-item-body">
         <div class="menu-item-title">
-            <h3>Grilled Mushrooms 🍃 🥬</h3>
+            <h3>Grilled Mushrooms</h3>
+            <div class="legend-item">
+                <span class="food-badge badge-vegetarian">🍃</span>
+                <span class="food-badge badge-vegan">🥬</span>
+            </div>
             <hr>
             <span>€6,00</span>
         </div>
@@ -457,7 +486,10 @@
     </div>
     <div class="menu-item-body">
         <div class="menu-item-title">
-            <h3>Stuffed Mushrooms 🍃</h3>
+            <h3>Stuffed Mushrooms</h3>
+            <div class="legend-item">
+                <span class="food-badge badge-vegetarian">🍃</span>
+            </div>
             <hr>
             <span>€6,50</span>
         </div>
@@ -475,7 +507,10 @@
     </div>
     <div class="menu-item-body">
         <div class="menu-item-title">
-            <h3>Buyurdi 🍃</h3>
+            <h3>Buyurdi</h3>
+            <div class="legend-item">
+                <span class="food-badge badge-vegetarian">🍃</span>
+            </div>
             <hr>
             <span>€6,00</span>
         </div>
@@ -493,7 +528,10 @@
     </div>
     <div class="menu-item-body">
         <div class="menu-item-title">
-            <h3>Bruschetta 🍃</h3>
+            <h3>Bruschetta</h3>
+            <div class="legend-item">
+                <span class="food-badge badge-vegetarian">🍃</span>
+            </div>
             <hr>
             <span>€5,50</span>
         </div>
@@ -511,7 +549,11 @@
     </div>
     <div class="menu-item-body">
         <div class="menu-item-title">
-            <h3>Zucchini Patties 🍃 🥬</h3>
+            <h3>Zucchini Patties</h3>
+            <div class="legend-item">
+                <span class="food-badge badge-vegetarian">🍃</span>
+                <span class="food-badge badge-vegan">🥬</span>
+            </div>
             <hr>
             <span>€6,00</span>
         </div>
@@ -529,7 +571,11 @@
     </div>
     <div class="menu-item-body">
         <div class="menu-item-title">
-            <h3>Stuffed Vine Leaves 🍃 🥬</h3>
+            <h3>Stuffed Vine Leaves</h3>
+            <div class="legend-item">
+                <span class="food-badge badge-vegetarian">🍃</span>
+                <span class="food-badge badge-vegan">🥬</span>
+            </div>
             <hr>
             <span>€6,00</span>
         </div>
@@ -547,7 +593,10 @@
     </div>
     <div class="menu-item-body">
         <div class="menu-item-title">
-            <h3>Feta with Phyllo Crust 🍃</h3>
+            <h3>Feta with Phyllo Crust</h3>
+            <div class="legend-item">
+                <span class="food-badge badge-vegetarian">🍃</span>
+            </div>
             <hr>
             <span>€6,70</span>
         </div>
@@ -585,7 +634,10 @@
         </div>
         <div class="menu-item-body">
             <div class="menu-item-title">
-                <h3>Tzatziki 🍃</h3>
+                <h3>Tzatziki</h3>
+                <div class="legend-item">
+                    <span class="food-badge badge-vegetarian">🍃</span>
+                </div>
                 <hr>
                 <span>€5,00</span>
             </div>
