add cheese badge

--- a/menu.html
+++ b/menu.html
@@ -238,6 +238,7 @@
             <h3>Grilled feta</h3>
             <div class="legend-item">
                 <span class="food-badge badge-vegetarian">🍃</span>
+                <span class="food-badge badge-chesse">🧀</span>
             </div>
             <hr>
             <span>€5,50</span>
@@ -259,6 +260,8 @@
             <h3>Feta cheese</h3>
                                         <div class="legend-item"> 
                                  <span class="food-badge badge-vegetarian">🍃</span>
+                                                 <span class="food-badge badge-chesse">🧀</span>
+
                              </div>
             <hr>
             <span>€4,50</span>
