--- a/menu.html
+++ b/menu.html
@@ -141,6 +141,10 @@
                                 <span class="food-badge badge-vegetarian">🍃</span>
                                 <span class="legend-text">Vegetarian</span>
                             </div>
+                            <div class="legend-item">
+                                <span class="food-badge badge-chesse">🧀</span>
+                                <span class="legend-text">Cheese</span>
+                            </div>
                         </div>
                     </div>
                     <!-- Section Title End -->
